Fix Overflow

--- a/assets/scss/pages/_global.scss
+++ b/assets/scss/pages/_global.scss
@@ -2,7 +2,7 @@
 
   section {
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
     width: 100%;
     background-repeat: no-repeat;
     background-position: top center;
